# nefaxer

./: .gitignore  .mise.toml  Cargo.toml  LICENSE-APACHE  README.md  RELEASE_v0.1.2.md  cspell.json
.github/workflows/: ci.yml  release.yml
src/: check.rs  index.rs  lib.rs  main.rs  types.rs
src/disk_detect/: linux.rs  macos.rs  mod.rs  network.rs  probe.rs  windows.rs
src/engine/: arg_parser.rs  cli.rs  core.rs  db_ops.rs  handlers.rs  hashing.rs  mod.rs  parallel.rs  progress.rs  tools.rs
src/engine/db_ops/: connection.rs  indexer.rs  mod.rs  open.rs
src/pipeline/: context.rs  error_handler.rs  metadata.rs  mod.rs  orchestrator.rs  walk.rs
src/utils/: config.rs  fd_limit.rs  logger.rs  mod.rs  nefaxer_toml.rs  passphrase.rs  tempfiles.rs
tests/: db_tests.rs  lib_tests.rs
tests/fixtures/: .nefaxer_complex  .nefaxer_simple
