[package]
name = "nefaxer"
version = "0.1.1"
edition = "2024"
rust-version = "1.93"
authors = ["AHurowitz <thicclatka@users.noreply.github.com>"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/thicclatka/nefaxer"
keywords = ["directory", "index", "diff", "sqlite", "change-detection"]
categories = [
  "command-line-utilities",
  "development-tools",
  "filesystem",
  "database",
  "caching",
]

[[bin]]
name = "nefaxer"
path = "src/main.rs"

[lib]
name = "nefaxer"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
clap = { version = "4.5.56", features = ["derive"] }
crossbeam-channel = "0.5.14"
derive = "1.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
features = "0.10.0"
ignore = "0.4.25"
jwalk = "0.8.1"
kdam = "0.6.4"
libc = "0.2.180"
log = "0.4.29"
memmap2 = "0.9.9"
rayon = "1.11.0"
rpassword = "7.4.0"
rusqlite = { version = "0.38.0", features = ["backup", "bundled-sqlcipher"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38.0"
walkdir = "2.5.0"

[dev-dependencies]
anyhow = "1.0.100"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
strip = true
