[package]
name = "nefaxer"
version = "0.1.3"
edition = "2024"
rust-version = "1.93"
authors = ["AHurowitz <thicclatka@users.noreply.github.com>"]
description = "High-performance directory indexer with content-aware diffing. Walks trees in parallel, stores metadata in SQLite, compares against a previous snapshot."
license = "MIT or Apache-2.0"
repository = "https://github.com/thicclatka/nefaxer"
homepage = "https://github.com/thicclatka/nefaxer"
documentation = "https://docs.rs/nefaxer"
readme = "README.md"
keywords = ["directory", "index", "diff", "sqlite", "change-detection"]
categories = [
  "command-line-utilities",
  "development-tools",
  "filesystem",
  "database",
  "caching",
]

[[bin]]
name = "nefaxer"
path = "src/main.rs"

[lib]
name = "nefaxer"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
crossbeam-channel = "0.5.14"
ctrlc = "3.5.1"
derive = "1.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
features = "0.10.0"
ignore = "0.4.25"
jwalk = "0.8.1"
kdam = "0.6.4"
libc = "0.2.180"
log = "0.4.29"
memmap2 = "0.9.9"
rayon = "1.11.0"
rpassword = "7.4.0"
rusqlite = { version = "0.38.0", features = ["backup", "bundled-sqlcipher"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38.0"
toml = "0.9.11"
walkdir = "2.5.0"

[dev-dependencies]
anyhow = "1.0.100"

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
debug = false
overflow-checks = false
